# imageEhance4Android

./: .gitignore  README.md  build.gradle  import-summary.txt  local.properties  settings.gradle
accessibility/: .gitignore  build.gradle  proguard-rules.pro
accessibility/src/main/: AndroidManifest.xml
accessibility/src/main/res/layout/: activity_main.xml
accessibility/src/main/res/values/: strings.xml
accessibility/src/main/res/xml/: serviceconfig.xml
app/: .gitignore  build.gradle
app/libs/: enhance-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  platformCL.cpp  platformCL.h  platformGL.cpp  platformGL.h  utils.h
app/src/main/res/layout/: activity_hello_jni.xml
app/src/main/res/values/: strings.xml
captures/: com.example.playerdemo_2017.05.26_18.35.trace  com.example.playerdemo_2017.07.05_17.05.li  com.example.playerdemo_2017.07.05_17.26.txt
enhance/: .gitignore  build.gradle  proguard-rules.pro
enhance/src/main/: AndroidManifest.xml
enhance/src/main/cpp/: CMakeLists.txt  EnhanceInterface.cpp  platformCL.cpp  platformCL.h  shader.cpp  utils.h
enhance/src/main/cpp/CL/: cl_platform.h
enhance/src/main/res/raw/: drago_fragment_shader.glsl  (+6 more)
gradle/wrapper/: gradle-wrapper.properties
playerdemo/: .gitignore  build.gradle
playerdemo/libs/: enhance-release.aar
playerdemo/src/main/: AndroidManifest.xml
previewcamera/: .gitignore  build.gradle  local.properties
previewcamera/gradle/wrapper/: gradle-wrapper.properties
showimg/: .gitignore  build.gradle
showimg/src/main/: AndroidManifest.xml
xpose/: .gitignore  build.gradle
xpose/src/main/: AndroidManifest.xml
xpose/src/main/assets/: xposed_init
(+52 files in other folders)
